lib/bayesnet/parsers/bif.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


require "treetop"

module Bayesnet
  module Parsers
    module Bif
      include Treetop::Runtime

      def root
        @root ||= :CompilationUnit
      end

      include Bayesnet::Parsers::Builder

      module CompilationUnit0
        def SEP1
          elements[0]
        end

        def NetworkDeclaration
          elements[1]
        end

        def list
          elements[2]
        end

        def SEP2
          elements[3]
        end
      end

      module CompilationUnit1
        def nodes
          list.elements.select { |e| e.respond_to?(:node) }.map(&:node)
        end

        def cpts
          list.elements.select { |e| e.respond_to?(:cpt) }.map(&:cpt)
        end
      end

      def _nt_CompilationUnit
        start_index = index
        if node_cache[:CompilationUnit].has_key?(index)
          cached = node_cache[:CompilationUnit][index]
          if cached
            node_cache[:CompilationUnit][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_NetworkDeclaration
          s0 << r2
          if r2
            s3, i3 = [], index
            loop do
              i4 = index
              r5 = _nt_VariableDeclaration
              if r5
                r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                r4 = r5
              else
                r6 = _nt_ProbabilityDeclaration
                if r6
                  r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                  r4 = r6
                else
                  @index = i4
                  r4 = nil
                end
              end
              if r4
                s3 << r4
              else
                break
              end
            end
            r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
            s0 << r3
            if r3
              r7 = _nt_SEP
              s0 << r7
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(CompilationUnit0)
          r0.extend(CompilationUnit1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:CompilationUnit][start_index] = r0

        r0
      end

      module NetworkDeclaration0
        def SEP1
          elements[0]
        end

        def NETWORK
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def WORD
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def NetworkContent
          elements[5]
        end

        def SEP4
          elements[6]
        end
      end

      def _nt_NetworkDeclaration
        start_index = index
        if node_cache[:NetworkDeclaration].has_key?(index)
          cached = node_cache[:NetworkDeclaration][index]
          if cached
            node_cache[:NetworkDeclaration][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_NETWORK
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_WORD
              s0 << r4
              if r4
                r5 = _nt_SEP
                s0 << r5
                if r5
                  r6 = _nt_NetworkContent
                  s0 << r6
                  if r6
                    r7 = _nt_SEP
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(NetworkDeclaration0)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:NetworkDeclaration][start_index] = r0

        r0
      end

      module NetworkContent0
        def SEP
          elements[0]
        end

        def Property
          elements[1]
        end
      end

      module NetworkContent1
        def SEP1
          elements[0]
        end

        def SEP2
          elements[3]
        end

        def SEP3
          elements[5]
        end
      end

      def _nt_NetworkContent
        start_index = index
        if node_cache[:NetworkContent].has_key?(index)
          cached = node_cache[:NetworkContent][index]
          if cached
            node_cache[:NetworkContent][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          if (match_len = has_terminal?("{", false, index))
            r2 = true
            @index += match_len
          else
            terminal_parse_failure('"{"')
            r2 = nil
          end
          s0 << r2
          if r2
            s3, i3 = [], index
            loop do
              i4, s4 = index, []
              r5 = _nt_SEP
              s4 << r5
              if r5
                r6 = _nt_Property
                s4 << r6
              end
              if s4.last
                r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
                r4.extend(NetworkContent0)
              else
                @index = i4
                r4 = nil
              end
              if r4
                s3 << r4
              else
                break
              end
            end
            r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
            s0 << r3
            if r3
              r7 = _nt_SEP
              s0 << r7
              if r7
                if (match_len = has_terminal?("}", false, index))
                  r8 = true
                  @index += match_len
                else
                  terminal_parse_failure('"}"')
                  r8 = nil
                end
                s0 << r8
                if r8
                  r9 = _nt_SEP
                  s0 << r9
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(NetworkContent1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:NetworkContent][start_index] = r0

        r0
      end

      module VariableDeclaration0
        def SEP1
          elements[0]
        end

        def VARIABLE
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def probabilityVariableName
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def variableContent
          elements[5]
        end

        def SEP4
          elements[6]
        end
      end

      module VariableDeclaration1
        def node
          values = variableContent.values
          [probabilityVariableName.text_value.to_sym, values]
        end
      end

      def _nt_VariableDeclaration
        start_index = index
        if node_cache[:VariableDeclaration].has_key?(index)
          cached = node_cache[:VariableDeclaration][index]
          if cached
            node_cache[:VariableDeclaration][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_VARIABLE
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_probabilityVariableName
              s0 << r4
              if r4
                r5 = _nt_SEP
                s0 << r5
                if r5
                  r6 = _nt_variableContent
                  s0 << r6
                  if r6
                    r7 = _nt_SEP
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(VariableDeclaration0)
          r0.extend(VariableDeclaration1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:VariableDeclaration][start_index] = r0

        r0
      end

      module VariableContent0
        def SEP
          elements[0]
        end

        def Property
          elements[1]
        end
      end

      module VariableContent1
        def SEP1
          elements[0]
        end

        def list
          elements[2]
        end

        def SEP2
          elements[3]
        end

        def SEP3
          elements[5]
        end
      end

      module VariableContent2
        def values
          list.elements.select { |e| e.respond_to?(:values) }.map(&:values).flatten
        end
      end

      def _nt_variableContent
        start_index = index
        if node_cache[:variableContent].has_key?(index)
          cached = node_cache[:variableContent][index]
          if cached
            node_cache[:variableContent][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          if (match_len = has_terminal?("{", false, index))
            r2 = true
            @index += match_len
          else
            terminal_parse_failure('"{"')
            r2 = nil
          end
          s0 << r2
          if r2
            s3, i3 = [], index
            loop do
              i4 = index
              i5, s5 = index, []
              r6 = _nt_SEP
              s5 << r6
              if r6
                r7 = _nt_Property
                s5 << r7
              end
              if s5.last
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                r5.extend(VariableContent0)
              else
                @index = i5
                r5 = nil
              end
              if r5
                r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                r4 = r5
              else
                r8 = _nt_variableDiscrete
                if r8
                  r8 = SyntaxNode.new(input, (index-1)...index) if r8 == true
                  r4 = r8
                else
                  @index = i4
                  r4 = nil
                end
              end
              if r4
                s3 << r4
              else
                break
              end
            end
            r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
            s0 << r3
            if r3
              r9 = _nt_SEP
              s0 << r9
              if r9
                if (match_len = has_terminal?("}", false, index))
                  r10 = true
                  @index += match_len
                else
                  terminal_parse_failure('"}"')
                  r10 = nil
                end
                s0 << r10
                if r10
                  r11 = _nt_SEP
                  s0 << r11
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(VariableContent1)
          r0.extend(VariableContent2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variableContent][start_index] = r0

        r0
      end

      module VariableDiscrete0
        def SEP1
          elements[0]
        end

        def VARIABLETYPE
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def DISCRETE
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def SEP4
          elements[6]
        end

        def DECIMAL_LITERAL
          elements[7]
        end

        def SEP5
          elements[8]
        end

        def SEP6
          elements[10]
        end

        def SEP7
          elements[12]
        end

        def variableValuesList
          elements[13]
        end

        def SEP8
          elements[14]
        end

        def SEP9
          elements[16]
        end

        def SEP10
          elements[18]
        end
      end

      module VariableDiscrete1
        def values
          variableValuesList.values
        end
      end

      def _nt_variableDiscrete
        start_index = index
        if node_cache[:variableDiscrete].has_key?(index)
          cached = node_cache[:variableDiscrete][index]
          if cached
            node_cache[:variableDiscrete][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_VARIABLETYPE
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_DISCRETE
              s0 << r4
              if r4
                r5 = _nt_SEP
                s0 << r5
                if r5
                  if (match_len = has_terminal?("[", false, index))
                    r6 = true
                    @index += match_len
                  else
                    terminal_parse_failure('"["')
                    r6 = nil
                  end
                  s0 << r6
                  if r6
                    r7 = _nt_SEP
                    s0 << r7
                    if r7
                      r8 = _nt_DECIMAL_LITERAL
                      s0 << r8
                      if r8
                        r9 = _nt_SEP
                        s0 << r9
                        if r9
                          if (match_len = has_terminal?("]", false, index))
                            r10 = true
                            @index += match_len
                          else
                            terminal_parse_failure('"]"')
                            r10 = nil
                          end
                          s0 << r10
                          if r10
                            r11 = _nt_SEP
                            s0 << r11
                            if r11
                              if (match_len = has_terminal?("{", false, index))
                                r12 = true
                                @index += match_len
                              else
                                terminal_parse_failure('"{"')
                                r12 = nil
                              end
                              s0 << r12
                              if r12
                                r13 = _nt_SEP
                                s0 << r13
                                if r13
                                  r14 = _nt_variableValuesList
                                  s0 << r14
                                  if r14
                                    r15 = _nt_SEP
                                    s0 << r15
                                    if r15
                                      if (match_len = has_terminal?("}", false, index))
                                        r16 = true
                                        @index += match_len
                                      else
                                        terminal_parse_failure('"}"')
                                        r16 = nil
                                      end
                                      s0 << r16
                                      if r16
                                        r17 = _nt_SEP
                                        s0 << r17
                                        if r17
                                          if (match_len = has_terminal?(";", false, index))
                                            r18 = true
                                            @index += match_len
                                          else
                                            terminal_parse_failure('";"')
                                            r18 = nil
                                          end
                                          s0 << r18
                                          if r18
                                            r19 = _nt_SEP
                                            s0 << r19
                                          end
                                        end
                                      end
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(VariableDiscrete0)
          r0.extend(VariableDiscrete1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variableDiscrete][start_index] = r0

        r0
      end

      module VariableValuesList0
        def SEP
          elements[0]
        end

        def probabilityVariableValue
          elements[1]
        end
      end

      module VariableValuesList1
        def SEP
          elements[0]
        end

        def probabilityVariableValue
          elements[1]
        end

        def list
          elements[2]
        end
      end

      module VariableValuesList2
        def values
          [probabilityVariableValue.value] + list.elements.map { |e| e.elements[1].value }.flatten
        end
      end

      def _nt_variableValuesList
        start_index = index
        if node_cache[:variableValuesList].has_key?(index)
          cached = node_cache[:variableValuesList][index]
          if cached
            node_cache[:variableValuesList][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_probabilityVariableValue
          s0 << r2
          if r2
            s3, i3 = [], index
            loop do
              i4, s4 = index, []
              r5 = _nt_SEP
              s4 << r5
              if r5
                r6 = _nt_probabilityVariableValue
                s4 << r6
              end
              if s4.last
                r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
                r4.extend(VariableValuesList0)
              else
                @index = i4
                r4 = nil
              end
              if r4
                s3 << r4
              else
                break
              end
            end
            r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
            s0 << r3
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(VariableValuesList1)
          r0.extend(VariableValuesList2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:variableValuesList][start_index] = r0

        r0
      end

      module ProbabilityVariableValue0
        def value
          self.text_value.to_sym
        end
      end

      def _nt_probabilityVariableValue
        start_index = index
        if node_cache[:probabilityVariableValue].has_key?(index)
          cached = node_cache[:probabilityVariableValue][index]
          if cached
            node_cache[:probabilityVariableValue][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        r0 = _nt_VALUE
        r0.extend(ProbabilityVariableValue0)
        r0.extend(ProbabilityVariableValue0)

        node_cache[:probabilityVariableValue][start_index] = r0

        r0
      end

      module ProbabilityDeclaration0
        def SEP1
          elements[0]
        end

        def PROBABILITY
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def probabilityVariablesList
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def probabilityContent
          elements[5]
        end

        def SEP4
          elements[6]
        end
      end

      module ProbabilityDeclaration1
        def cpt
          { variable: probabilityVariablesList.value,
            parents: probabilityVariablesList.parents,
            cpt: probabilityContent.cpt}
        end
      end

      def _nt_ProbabilityDeclaration
        start_index = index
        if node_cache[:ProbabilityDeclaration].has_key?(index)
          cached = node_cache[:ProbabilityDeclaration][index]
          if cached
            node_cache[:ProbabilityDeclaration][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_PROBABILITY
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_probabilityVariablesList
              s0 << r4
              if r4
                r5 = _nt_SEP
                s0 << r5
                if r5
                  r6 = _nt_probabilityContent
                  s0 << r6
                  if r6
                    r7 = _nt_SEP
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ProbabilityDeclaration0)
          r0.extend(ProbabilityDeclaration1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:ProbabilityDeclaration][start_index] = r0

        r0
      end

      module ProbabilityVariablesList0
        def SEP
          elements[0]
        end

        def probabilityVariableName
          elements[1]
        end
      end

      module ProbabilityVariablesList1
        def SEP1
          elements[0]
        end

        def SEP2
          elements[2]
        end

        def probabilityVariableName
          elements[3]
        end

        def list
          elements[4]
        end

        def SEP3
          elements[5]
        end

        def SEP4
          elements[7]
        end
      end

      module ProbabilityVariablesList2
        def value
          probabilityVariableName.value
        end

        def parents
           list.elements.map { |e| e.elements[1].value }.flatten
        end
      end

      def _nt_probabilityVariablesList
        start_index = index
        if node_cache[:probabilityVariablesList].has_key?(index)
          cached = node_cache[:probabilityVariablesList][index]
          if cached
            node_cache[:probabilityVariablesList][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          if (match_len = has_terminal?("(", false, index))
            r2 = true
            @index += match_len
          else
            terminal_parse_failure('"("')
            r2 = nil
          end
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_probabilityVariableName
              s0 << r4
              if r4
                s5, i5 = [], index
                loop do
                  i6, s6 = index, []
                  r7 = _nt_SEP
                  s6 << r7
                  if r7
                    r8 = _nt_probabilityVariableName
                    s6 << r8
                  end
                  if s6.last
                    r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                    r6.extend(ProbabilityVariablesList0)
                  else
                    @index = i6
                    r6 = nil
                  end
                  if r6
                    s5 << r6
                  else
                    break
                  end
                end
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                s0 << r5
                if r5
                  r9 = _nt_SEP
                  s0 << r9
                  if r9
                    if (match_len = has_terminal?(")", false, index))
                      r10 = true
                      @index += match_len
                    else
                      terminal_parse_failure('")"')
                      r10 = nil
                    end
                    s0 << r10
                    if r10
                      r11 = _nt_SEP
                      s0 << r11
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ProbabilityVariablesList1)
          r0.extend(ProbabilityVariablesList2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:probabilityVariablesList][start_index] = r0

        r0
      end

      module ProbabilityVariableName0
        def value
          self.text_value.to_sym
        end
      end

      def _nt_probabilityVariableName
        start_index = index
        if node_cache[:probabilityVariableName].has_key?(index)
          cached = node_cache[:probabilityVariableName][index]
          if cached
            node_cache[:probabilityVariableName][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        r0 = _nt_WORD
        r0.extend(ProbabilityVariableName0)
        r0.extend(ProbabilityVariableName0)

        node_cache[:probabilityVariableName][start_index] = r0

        r0
      end

      module ProbabilityContent0
        def SEP
          elements[0]
        end

        def Property
          elements[1]
        end
      end

      module ProbabilityContent1
        def SEP1
          elements[0]
        end

        def SEP2
          elements[2]
        end

        def list
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def SEP4
          elements[6]
        end
      end

      module ProbabilityContent2
        def cpt
           distributions = list.elements.select { |e| e.respond_to?(:given) }.map do |e|
             {given: e.given,
              distribution: e.distribution}
           end
           table = list.elements.select { |e| e.respond_to?(:table) }.map do |e|
            {table: e.table}
           end
           if distributions.empty? && !table.empty?
             return table.first
           elsif !distributions.empty? && table.empty?
             return distributions
           elsif distributions.empty? && table.empty?
             raise "Either distributions or table must be provided"
           else
             raise "Both - distributions or table cannot be provided at the same time"
           end
        end
      end

      def _nt_probabilityContent
        start_index = index
        if node_cache[:probabilityContent].has_key?(index)
          cached = node_cache[:probabilityContent][index]
          if cached
            node_cache[:probabilityContent][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          if (match_len = has_terminal?("{", false, index))
            r2 = true
            @index += match_len
          else
            terminal_parse_failure('"{"')
            r2 = nil
          end
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              s4, i4 = [], index
              loop do
                i5 = index
                i6, s6 = index, []
                r7 = _nt_SEP
                s6 << r7
                if r7
                  r8 = _nt_Property
                  s6 << r8
                end
                if s6.last
                  r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                  r6.extend(ProbabilityContent0)
                else
                  @index = i6
                  r6 = nil
                end
                if r6
                  r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                  r5 = r6
                else
                  r9 = _nt_ProbabilityDefaultEntry
                  if r9
                    r9 = SyntaxNode.new(input, (index-1)...index) if r9 == true
                    r5 = r9
                  else
                    r10 = _nt_ProbabilityEntry
                    if r10
                      r10 = SyntaxNode.new(input, (index-1)...index) if r10 == true
                      r5 = r10
                    else
                      r11 = _nt_ProbabilityTable
                      if r11
                        r11 = SyntaxNode.new(input, (index-1)...index) if r11 == true
                        r5 = r11
                      else
                        @index = i5
                        r5 = nil
                      end
                    end
                  end
                end
                if r5
                  s4 << r5
                else
                  break
                end
              end
              r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
              s0 << r4
              if r4
                r12 = _nt_SEP
                s0 << r12
                if r12
                  if (match_len = has_terminal?("}", false, index))
                    r13 = true
                    @index += match_len
                  else
                    terminal_parse_failure('"}"')
                    r13 = nil
                  end
                  s0 << r13
                  if r13
                    r14 = _nt_SEP
                    s0 << r14
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ProbabilityContent1)
          r0.extend(ProbabilityContent2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:probabilityContent][start_index] = r0

        r0
      end

      module ProbabilityEntry0
        def SEP1
          elements[0]
        end

        def probabilityValuesList
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def floatingPointList
          elements[3]
        end

        def SEP3
          elements[4]
        end

        def SEP4
          elements[6]
        end
      end

      module ProbabilityEntry1
        def given
          probabilityValuesList.values
        end
        def distribution
          floatingPointList.values
        end
      end

      def _nt_ProbabilityEntry
        start_index = index
        if node_cache[:ProbabilityEntry].has_key?(index)
          cached = node_cache[:ProbabilityEntry][index]
          if cached
            node_cache[:ProbabilityEntry][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          r2 = _nt_probabilityValuesList
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_floatingPointList
              s0 << r4
              if r4
                r5 = _nt_SEP
                s0 << r5
                if r5
                  if (match_len = has_terminal?(";", false, index))
                    r6 = true
                    @index += match_len
                  else
                    terminal_parse_failure('";"')
                    r6 = nil
                  end
                  s0 << r6
                  if r6
                    r7 = _nt_SEP
                    s0 << r7
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ProbabilityEntry0)
          r0.extend(ProbabilityEntry1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:ProbabilityEntry][start_index] = r0

        r0
      end

      module ProbabilityValuesList0
        def SEP
          elements[0]
        end

        def probabilityVariableValue
          elements[1]
        end
      end

      module ProbabilityValuesList1
        def SEP1
          elements[0]
        end

        def SEP2
          elements[2]
        end

        def probabilityVariableValue
          elements[3]
        end

        def list
          elements[4]
        end

        def SEP3
          elements[5]
        end

      end

      module ProbabilityValuesList2
        def values
          [probabilityVariableValue.value] + list.elements.map { |e| e.elements[1].value }
        end
      end

      def _nt_probabilityValuesList
        start_index = index
        if node_cache[:probabilityValuesList].has_key?(index)
          cached = node_cache[:probabilityValuesList][index]
          if cached
            node_cache[:probabilityValuesList][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        r1 = _nt_SEP
        s0 << r1
        if r1
          if (match_len = has_terminal?("(", false, index))
            r2 = true
            @index += match_len
          else
            terminal_parse_failure('"("')
            r2 = nil
          end
          s0 << r2
          if r2
            r3 = _nt_SEP
            s0 << r3
            if r3
              r4 = _nt_probabilityVariableValue
              s0 << r4
              if r4
                s5, i5 = [], index
                loop do
                  i6, s6 = index, []
                  r7 = _nt_SEP
                  s6 << r7
                  if r7
                    r8 = _nt_probabilityVariableValue
                    s6 << r8
                  end
                  if s6.last
                    r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                    r6.extend(ProbabilityValuesList0)
                  else
                    @index = i6
                    r6 = nil
                  end
                  if r6
                    s5 << r6
                  else
                    break
                  end
                end
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                s0 << r5
                if r5
                  r9 = _nt_SEP
                  s0 << r9
                  if r9
                    if (match_len = has_terminal?(")", false, index))
                      r10 = true
                      @index += match_len
                    else
                      terminal_parse_failure('")"')
                      r10 = nil
                    end
                    s0 << r10
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ProbabilityValuesList1)
          r0.extend(ProbabilityValuesList2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:probabilityValuesList][start_index] = r0

        r0
      end

      module ProbabilityDefaultEntry0
        def SEP1
          elements[0]
        end

        def floatingPointList
          elements[1]
        end

        def SEP2
          elements[2]
        end

        def SEP3
          elements[4]
        end
      end

      module ProbabilityDefaultEntry1
        def values
          floatingPointList.values
        end
      end

      def _nt_ProbabilityDefaultEntry
        start_index = index
        if node_cache[:ProbabilityDefaultEntry].has_key?(index)
          cached = node_cache[:ProbabilityDefaultEntry][index]
          if cached
            node_cache[:ProbabilityDefaultEntry][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end
